# gulf

./: README.md  README_CN.md  pyproject.toml
dos/: bond_daily.dos  stock_basic.dos  stock_nfq_daily.dos
examples/: e01_time_series_analysis.ipynb  e05_lightgbm_ranker.ipynb
gulf/akshare/: const.py
gulf/akshare/bond/: __init__.py  all_basic.py  cov_value_analysis.py  history.py  redeem.py
gulf/akshare/stock/: __init__.py  all_basic.py  analyst_rating.py  history.py  migrate_func.py
gulf/dolphindb/: __init__.py  __main__.py  base.py  bond.py  const.py  crypto.py  db_path.py  stock.py
gulf/dolphindb/cfg_linux/: dolphindb.cfg
gulf/dolphindb/cfg_win/: dolphindb.cfg
gulf/dolphindb/config/: __init__.py  db_path.py  dimension_table.py  partition_table.py  schema.py  stream_table.py  stream_table_test_pub.py  stream_table_test_sub.py
gulf/dolphindb/pyfuncs/: __init__.py
gulf/dolphindb/pyfuncs/gtja_alpha191/: __init__.py
gulf/dolphindb/pyfuncs/wq_alpha101/: __init__.py  factor_test.py
gulf/dolphindb/tables/: __init__.py
gulf/dolphindb/tables/dimension/: bond_tables.py  stock_tables.py  table.py
gulf/dolphindb/tables/partition/: __init__.py  bond_schema.py  bond_tables.py  crypto_schema.py  schema.py  stock_schema.py  stock_tables.py  table.py
gulf/dolphindb/tables/stream/: stream_table.py  stream_table_test_pub.py  stream_table_test_sub.py
gulf/tdx/: finance_cw.py  fq.py  gbbq.py
gulf/tdx/finance/: map.py
gulf/tdx/finance/f008_073_balance_sheet1/: __init__.py  f008_040_assets.py  (+2 more)
gulf/utils/: code2code.py  stock.py
tests/: __init__.py
(+15 files in other folders)
